# outlook-addin-test

./: .gitignore  README.md
.github/workflows/: deploy-functions.yml  deploy-functions.yml.disabled
docs/: ATTACHMENT_UPLOAD_PLAN.md  CLAUDE_CODE_PROMPT.md  RUNBOOK.md  SETUP.md  deploy.md
infra/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  role_assignments.tf  tfplan  variables.tf
infra/envs/: dev.tfvars.example  local.tfvars.example
scripts/: build-manifest.js  create-icons.js
src/addin/: commands.html  commands.js  commands.ts  manifest.dev.xml  manifest.xml  package-lock.json  package.json  tsconfig.json  types.js  types.ts  vite.config.js  vite.config.ts
src/addin/public/: index.html
src/functions/: .funcignore  dev.settings.json.example  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt
src/functions/shared/: auth.py  blob.py  models.py  service_bus.py
