[project]
name = "enquiry-functions"
version = "0.1.0"
description = "Outlook add-in test harness — Azure Functions (enquiry-receiver + enquiry-processor)"
requires-python = ">=3.13.0, <3.14"
dependencies = [
    # Azure Functions Python worker
    "azure-functions>=2.1.0",
    # Service Bus SDK — Managed Identity sender/receiver
    "azure-servicebus>=7.14.3",
    # DefaultAzureCredential — falls back to az login locally, Managed Identity in Azure
    "azure-identity>=1.25.3",
    # JWT validation — PyJWT[crypto] pulls in cryptography for RS256 (JWKS) support
    "PyJWT[crypto]>=2.13.0",
    # Python 3.13+ runtime version control — runs on latest stable Functions Python worker
    "azure-functions-runtime",
    # Blob storage SDK — used by download_generator to upload ZIPs and generate SAS URLs
    "azure-storage-blob>=12.0.0",
]

[tool.uv]
# uv manages Python 3.13 and the virtual environment.
# Run `uv sync` to create/update the venv.
# Run `uv export --no-hashes -o requirements.txt` to regenerate requirements.txt
# before publishing to Azure (Oryx remote build installs from requirements.txt).
python-preference = "managed"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
    "NPY",      # Some numpy-specific things
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
